--- a/indx.html
+++ b/indx.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento de Pedidos</title>
     <link rel="stylesheet" href="./src/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 
 <body>
@@ -14,6 +15,7 @@
         <div>
             <button id="btnNewOrder">Iniciar Novo Pedido</button>
             <button id="btnToggleProductRegistration">Cadastrar Produto</button>
+            <button id="btnGenerateReport">Gerar Relatório</button>
         </div>
     </header>
 
