--- a/indx.html
+++ b/indx.html
@@ -15,6 +15,11 @@
         <div>
             <button id="btnNewOrder">Iniciar Novo Pedido</button>
             <button id="btnToggleProductRegistration">Cadastrar Produto</button>
+            <select name="" id="reportFilter">
+                <option value="todos">Todos Os Pedidos</option>
+                <option value="aberto">Pedidos Abertos</option>
+                <option value="fechado">Pedidos Fechados</option>
+            </select>
             <button id="btnGenerateReport">Gerar Relatório</button>
         </div>
     </header>
