--- a/indx.html
+++ b/indx.html
@@ -41,7 +41,7 @@
                     <button id="btnRegisterProduct">Cadastrar Produto</button>
                 </section>
 
-                <section id="orderDetalisSection" style="display: none;">
+                <section id="orderDetailsSection" style="display: none;">
                     <h2>Detalhes Do Pedido <span id="orderIdDisplay"></span></h2>
                     <p id="orderStatus"></p>
                     <div id="productSelection">
