--- a/indx.html
+++ b/indx.html
@@ -35,7 +35,7 @@
 
             <div class="main-content">
                 <section id="productRegistrationSection" style="display: none;">
-                    <h2>Cadastro de Produtos</h2>
+                    <h2>Cadastro de Produtos <span><button id="btnCloseProductRegistration">X</button></span></h2>
                     <input type="text" id="newProductName" placeholder="Nome do Produto">
                     <input type="text" id="newProductDescription" placeholder="Descrição do Produto">
                     <input type="number" id="newProductPrice" placeholder="Preço do Produto">
